add tests for Winner class